fix the git version, and aligned the content cards in a better way

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,11 @@ main{
     border: 1px solid black;
 
 }
+.menu{
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
 .title {
     position:fixed;
     color: white;
@@ -90,28 +95,37 @@ nav ul li {
 
 } 
 .menu{
-    display: flex;
+    display: block;
     gap: 20px;
+    text-align: center;
+    margin-top: 50px;;
 }
 .row{
     display: flex;
     flex-direction: row;
     justify-content: center;
-
+    width: 100%;
+    height: 100%;
+    flex: 1 1 0px;
+    position: relative;
 
 }
 .card{
-    width: 20%;
+    /* width: 50%; */
+    
     background: lightcyan;
     border: 1px solid black;
     margin-bottom: 50px;
     transition: 0.3s;
+    width: 100%;
+    height: 100%;
+    position: relative;
 
 }
 .card-header{
     text-align: center;
     padding: 50px 10px;
-    background: linear-gradient(to right, magenta, #ff4b2b);
+    background: linear-gradient(to right, magenta, purple);
     color: white;
 
 }
@@ -127,7 +141,31 @@ nav ul li {
     transform: scale(1.05);
     box-shadow: 0 0 40px -10px rgba(0,0,0,0.25);
 }
+.animalSerotonin {
+    margin: auto;
+    box-sizing: border-box;
+    display:flex;
+    justify-content: left;
+    align-items: left;
+    background-color: blue;
 
+    
+} 
+
+
+#catPic{
+   
+    max-width: 300px;
+    max-height: 300px;
+    
+}
+  
+/* #dogPic{
+   
+    max-width: 300px;
+    max-height: 300px;
+    
+}  */
 
 
 
